Bug 331512 - Workspace::switchWindow(Direction direction) should operate on VirtualDesktopManager::self()->current() if c->isOnAllDesktops()
Summary: Workspace::switchWindow(Direction direction) should operate on VirtualDesktop...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (show other bugs)
Version: 4.11.6
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 5
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/123...
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-26 00:20 UTC by Moviuro
Modified: 2015-05-15 22:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 5.3
thomas.luebking: ReviewRequest+
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Moviuro 2014-02-26 00:20:15 UTC
Any window that is set to be visible on all desktops cannot get/give focus using the keyboard shortcuts

Reproducible: Always

Steps to Reproduce:
1. Open four windows (e.g. konsole), put them on the four quarters of your screen
2. Switch focus from one to the other using Meta+Alt+<Arrow>
3. Put two of them in 'Visible on all desktops'
4. Switch focus from one to the other using Meta+Alt+<Arrow>
Actual Results:  
No focus change between the two groups (single desktop .vs. multi desktop). Focus is fixed on the active group of windows.

Expected Results:  
Switches focus normally.
Comment 1 Teemu Erkkola 2015-01-28 15:22:52 UTC
Still reproducible in 5.2.
Comment 2 Thomas Lübking 2015-01-28 15:59:44 UTC
Sorry and thanks for the reminder.
Comment 3 Thomas Lübking 2015-02-05 20:58:06 UTC
Git commit fdcb0e6180931ea6352657bf40353d34a8b15ed6 by Thomas Lübking.
Committed on 28/01/2015 at 15:56.
Pushed by luebking into branch 'master'.

correctly test whether client is on a VD

when considering if for a directional
focus switch
REVIEW: 122292
FIXED-IN: 5.3

M  +1    -1    useractions.cpp

http://commits.kde.org/kwin/fdcb0e6180931ea6352657bf40353d34a8b15ed6
Comment 4 Teemu Erkkola 2015-05-05 06:10:15 UTC
Testing in 5.3, I can now move to a window that is on all desktops, but can't move back from it to windows that are on current desktop.

Steps to reproduce:
1. Open two windows (A and B)
2. Set one (B) as visible on all desktops
3. Try to move between the two using Meta+Alt+<Arrow>

Expected result: the focus switches between the two
Observed result: the focus can only be changed from A to B, not from B to A
Comment 5 Thomas Lübking 2015-05-15 22:16:01 UTC
Git commit 56fce0adc7ebd59d8fbfa682fb598eeb82e98541 by Thomas Lübking.
Committed on 15/05/2015 at 19:58.
Pushed by luebking into branch 'Plasma/5.3'.

make switchWindow FROM stickies act on current VD

it's probably the user expectation and few windows
are on all desktops
REVIEW: 123640

M  +1    -1    useractions.cpp

http://commits.kde.org/kwin/56fce0adc7ebd59d8fbfa682fb598eeb82e98541
Comment 6 Thomas Lübking 2015-05-15 22:47:26 UTC
Git commit b3bd9ea14484fddc7257d09b7754850576d3cb7a by Thomas Lübking.
Committed on 15/05/2015 at 21:55.
Pushed by luebking into branch 'master'.

make switchWindow FROM stickies act on current VD

it's probably the user expectation and few windows
are on all desktops
REVIEW: 123640

M  +1    -1    useractions.cpp

http://commits.kde.org/kwin/b3bd9ea14484fddc7257d09b7754850576d3cb7a