correctly test whether client is on a VD

when considering if for a directional
focus switch

BUG: 331512
REVIEW: 122292
FIXED-IN: 5.3